objects/nFORCE__Rule_Engine_Rule__c.object
<CustomObject>
    <description>Contains the details of the rules that are registered with the nCino application.</description>
    <fields>
        <fullName>nFORCE__Active__c</fullName>
        <description>This field indicates if the rule is active. This field is automatically populated based on the start and end dates entered in the rule engine when setting up a new rule.</description>
        <formula>(nFORCE__Start_Date__c &lt;= TODAY()) &amp;&amp; (ISBLANK(nFORCE__End_Date__c) || nFORCE__End_Date__c &gt;= TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>This field is manually entered and optional. It is used to provide a description of the rule being set. Although not required, it is recommended to include a description as best practice.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__End_Date__c</fullName>
        <description>The field is optional. It contains the last date on which the template may be used. After this date the template will no longer be considered as active. If the date is not specified the the rule will be considered as active if the Start Date requirement is met.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nFORCE__Rule_Engine_Context_Rule__c</fullName>
        <description>This field is manually selected and required. This picklist will smart filter the options based on the context selected. This field is used to specify the rule/decision which the Rule Engine  implements. This is used with Rule Engine Rule Name to link the action with nCino to the logic built in Salesforce Flow.</description>
        <label>Rule Engine Context Rule</label>
        <referenceTo>nFORCE__Rule_Engine_Context_Rule__c</referenceTo>
        <relationshipLabel>Rule Engine Rules</relationshipLabel>
        <relationshipName>Rule_Engine_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nFORCE__Rule_Engine_Rule_Name__c</fullName>
        <description>This field is manually selected and required. This field is used to specify the name of the Rule in the Rule Engine. For example the &apos;Flow Name&apos; when the Salesforce Flow Rule Engine is used. This links the &quot;flow&quot; with the actions within nCino (context rule name) together.</description>
        <label>Rule Engine Rule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Rule_Engine_Rule_Reference__c</fullName>
        <description>The field is required. It contains the unique reference to the Rule in the rule engine.</description>
        <label>Rule Engine Rule Reference</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Rule_Engine__c</fullName>
        <description>This field is required. This field specifies the Rule Engine associated with the rule. Currently only one rule engine is supported, Salesforce Flow. This is automatically set when creating a new rule.</description>
        <label>Rule Engine</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>This date field is manually set and is required. The start date is the date from which the rule will be used. Before this date the rule will be considered as inactive.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Rule Engine Rule</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RER{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Engine Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>